refactor: 카테고리별 게시글 제목 초성으로 그룹화 (#36)
* feat: 초성 그룹화 기능 추가

* refactor: 카테고리별 게시글 목록 조회 초성으로 그룹화